--- a/src/components/TransactionList.module.css
+++ b/src/components/TransactionList.module.css
@@ -12,4 +12,5 @@
   justify-content: space-between;
   padding: 20px;
   box-shadow: 3px 3px 5px 0px rgba(219, 219, 219, 0.75);
+  margin-bottom: 20px;
 }
